# embassy-nrf-blinky

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
crates/main/: Cargo.toml
crates/main/defmt-rtt-integration/src/: lib.rs
crates/main/src/: main.rs
crates/main/tests/: integration.rs
crates/mt-rt/: Cargo.toml
crates/mt-rt/defmt-rtt-integration/: Cargo.toml
crates/mt-rt/src/: main.rs
