[workspace]
members = [
    "crates/mt-rt"
    ]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
include = [
]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-nrf = { version = "0.8.0", features = ["nrf52840", "time-driver-rtc1", "defmt"] }
embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-cortex-m", "defmt"] }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
