[package]
name = "main"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-nrf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

[dev-dependencies]
defmt-test = { workspace = true }

[[bin]]
name = "main"
test = false

[[test]]
name = "integration"
harness = false