[package]
name = "mt-rt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
nrf52840-hal = { workspace = true }
embedded-hal = { workspace = true }