[package]
name = "defmt-rtt-integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-nrf = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }
semihosting = { workspace = true }

[dev-dependencies]
defmt-test = { workspace = true }

[lib]
harness = false